--- a/settings/update.cfg
+++ b/settings/update.cfg
@@ -1,5 +1,7 @@
 # Time to start updates and reboot
 # 24h clock (retry period start and end)
+# Timezone information is also accepted
+# e.g: "02:00 SAST"
 update-time-start=02:00
 update-time-end=06:00
 
@@ -14,6 +16,13 @@ update-live=yes
 # Make updates download debug logs
 debug-logs=yes
 
-# How often the unit dails in to indicate
-# its alive (seconds)
+# How often the device updates the heartbeat
+# in the cloud (zero is disabled)
+# Any value below 300 will be rate limited to
+# 300 seconds. 
 heartbeat-rate=300
+
+# Health logger rate (zero is disabled)
+# Any value below 300 will be rate limited to
+# 300 seconds. 
+health-logger-rate=300
