--- a/iot/device-rpi3b-plus/device-files/update-check.service
+++ b/iot/device-rpi3b-plus/device-files/update-check.service
@@ -1,7 +1,7 @@
 [Unit]
 Description="Update Checker"
-After=ep-update.service
-Wants=ep-update.service
+After=updater.service
+Wants=updater.service
 
 [Service]
 Type=simple
