--- a/settings/update.cfg
+++ b/settings/update.cfg
@@ -5,15 +5,15 @@
 update-time-start=02:00
 update-time-end=06:00
 
-# How many days to skip the update slot for
-# (This includes uploading stats)
+# How many days to skip any cloud sync
+# (upload or download) activity
 update-time-skip-days=0
 
 # Enable immediate update (yes, no)
 # (Do not wait for update time)
 update-live=yes
 
-# Make updates download debug logs
+# Make updates download debug logs (yes, no)
 debug-logs=yes
 
 # How often the device updates the heartbeat
