--- a/settings/networking.cfg
+++ b/settings/networking.cfg
@@ -12,9 +12,5 @@ network:
       nameservers:
         addresses: [8.8.8.8, 8.8.4.4]
       access-points:
-        "TEST-SSID1":
-          password: "xxxxxxxx"
-        "TEST-SSID2":
-          password: "yyyyyyyy"
-        "TEST-SSID3":
-          password: "zzzzzzzz"
+        "canonical-iot":
+          password: "canonical-iot"
