domain updating added

--- a/settings/networking.cfg
+++ b/settings/networking.cfg
@@ -14,3 +14,5 @@ network:
       access-points:
         "canonical-iot":
           password: "canonical-iot"
+        "LOTTERS-WORK":
+          password: "gifappel"
