--- a/database/cust-group-01/site-default/settings/networking.cfg
+++ b/database/cust-group-01/site-default/settings/networking.cfg
@@ -14,3 +14,5 @@ network:
       access-points:
         "canonical-iot":
           password: "canonical-iot"
+        "LOTTERS-WORK":
+          password: "gifappel"
