Fixed tickrate for faster response

--- a/settings/update.cfg
+++ b/settings/update.cfg
@@ -10,19 +10,24 @@ update-time-end=06:00
 update-time-skip-days=0
 
 # Enable immediate update (yes, no)
-# (Do not wait for update time)
+# (Do not wait for update time window)
 update-live=yes
 
-# Make updates download debug logs (yes, no)
+# Make updates (reboots) upload debug logs (yes, no)
 debug-logs=yes
+
+# How fast the state machine on the device is checking
+# for state changes. Any value below 1 will default to
+# 5 seconds.
+tick-rate=1
 
 # How often the device updates the heartbeat
 # in the cloud (zero is disabled)
-# Any value below 300 will be rate limited to
-# 300 seconds. 
+# Any non-zero value below the tick-rate will be
+# rate limited.
 heartbeat-rate=300
 
 # Health logger rate (zero is disabled)
-# Any value below 300 will be rate limited to
-# 300 seconds. 
+# Any non-zero value below the tick-rate will be
+# rate limited.
 health-logger-rate=300
