--- a/settings/networking.cfg
+++ b/settings/networking.cfg
@@ -12,5 +12,5 @@ network:
       nameservers:
         addresses: [8.8.8.8, 8.8.4.4]
       access-points:
-        "BHES_OFFICE":
-          password: "gifappel"
+        "canonical-iot":
+          password: "canonical-iot"
